[gd_scene load_steps=19 format=3 uid="uid://do1y2lf0ig146"]

[ext_resource type="Script" path="res://scripts/levels/katedra_matematiky/katedra_matematiky.gd" id="1_313yp"]
[ext_resource type="Texture2D" uid="uid://b2ln3geqv7chd" path="res://textures/katedra_matematiky_background.png" id="3_wfemi"]
[ext_resource type="PackedScene" uid="uid://dprbjqvu2al7c" path="res://scenes/player.tscn" id="3_wsci7"]
[ext_resource type="PackedScene" uid="uid://ltped2ukoxcp" path="res://scenes/interaction_area.tscn" id="4_01f4g"]
[ext_resource type="Script" path="res://scripts/levels/katedra_matematiky/math_teacher.gd" id="4_p4oyt"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/DialogueBox.gd" id="5_svop0"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeWait.gd" id="6_1v76e"]
[ext_resource type="Texture2D" uid="uid://wpodahmiqy8" path="res://images/npc_characters/math_teacher.png" id="6_e03ta"]
[ext_resource type="Resource" uid="uid://datpr5dfehfck" path="res://dialogues/math_teacher.tres" id="6_wt4mv"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeGhost.gd" id="7_5ia8t"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeMatrix.gd" id="8_vw4ke"]
[ext_resource type="PackedScene" uid="uid://c7dtdy11356p2" path="res://scenes/user_interface.tscn" id="12_h0c16"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7gr61"]
size = Vector2(281, 298)

[sub_resource type="CircleShape2D" id="CircleShape2D_wy8d7"]
radius = 300.0

[sub_resource type="CircleShape2D" id="CircleShape2D_uhrxh"]
radius = 41.0122

[sub_resource type="RichTextEffect" id="RichTextEffect_3b4l1"]
script = ExtResource("6_1v76e")

[sub_resource type="RichTextEffect" id="RichTextEffect_lw2ll"]
script = ExtResource("7_5ia8t")

[sub_resource type="RichTextEffect" id="RichTextEffect_0c0mt"]
script = ExtResource("8_vw4ke")

[node name="katedra_matematiky" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_313yp")
default_position = Vector2(860, 600)
camera_limit_bottom = 1080
camera_limit_right = 1920

[node name="user_interface" parent="." instance=ExtResource("12_h0c16")]

[node name="background" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(960, 540)
texture = ExtResource("3_wfemi")

[node name="sumavska_transition" type="Area2D" parent="."]
position = Vector2(71, 1154)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="sumavska_transition"]
position = Vector2(781.5, -224)
shape = SubResource("RectangleShape2D_7gr61")

[node name="player" parent="." instance=ExtResource("3_wsci7")]
position = Vector2(868, 609)

[node name="math_teacher" type="StaticBody2D" parent="."]
y_sort_enabled = true
position = Vector2(1424, 500)
collision_mask = 2
script = ExtResource("4_p4oyt")
texture = ExtResource("6_e03ta")
dialogue_data = ExtResource("6_wt4mv")
start_id = "START"

[node name="Sprite2D" type="Sprite2D" parent="math_teacher"]
offset = Vector2(0, -90)

[node name="interaction_area" parent="math_teacher" instance=ExtResource("4_01f4g")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="math_teacher/interaction_area"]
shape = SubResource("CircleShape2D_wy8d7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="math_teacher"]
shape = SubResource("CircleShape2D_uhrxh")

[node name="CanvasLayer" type="CanvasLayer" parent="math_teacher"]

[node name="DialogueBox" type="Panel" parent="math_teacher/CanvasLayer"]
visible = false
z_index = 3
offset_left = 460.0
offset_top = 808.0
offset_right = 1460.0
offset_bottom = 1064.0
script = ExtResource("5_svop0")
custom_effects = Array[RichTextEffect]([SubResource("RichTextEffect_3b4l1"), SubResource("RichTextEffect_lw2ll"), SubResource("RichTextEffect_0c0mt")])

[node name="boundaries" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="boundaries"]
polygon = PackedVector2Array(3, 182, 1725, 181, 1916, 1079, -1, 1078, 1, 194, -9, 192, -10, 1091, 1928, 1089, 1922, 1, 1, -2, -9, 192, 1, 194)

[connection signal="body_entered" from="sumavska_transition" to="." method="_on_sumavska_transition_body_entered"]
[connection signal="dialogue_signal" from="math_teacher/CanvasLayer/DialogueBox" to="math_teacher" method="_on_dialogue_signal"]
